2023-07-30T16:08:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5707169013 # 1054
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-30
* notice: last 14d: unq all: 5 4142
* notice: prev accum: outdated-unq outdated-all / unq all: 1576 144029 / 1614 148336
* notice: next accum: outdated-unq outdated-all / unq all: 1576 144029 / 1614 148429
* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -1 -93 / +3 +206 -0 -0 / 3 206
* notice: removed / changed dates: [] / [2023-07-16 2023-07-30]

2023-07-30T08:08:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5705116311 # 1053
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-30
* notice: last 14d: unq all: 5 4142
* notice: prev accum: outdated-unq outdated-all / unq all: 1576 144029 / 1611 148223
* notice: next accum: outdated-unq outdated-all / unq all: 1576 144029 / 1614 148336
* notice: prev exec diff / last date diff / accum: unq all: +3 +113 -0 -138 / +3 +113 -0 -0 / 3 113
* notice: removed / changed dates: [] / [2023-07-16 2023-07-30]

2023-07-30T00:45:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5703338043 # 1052
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-30
* notice: last 14d: unq all: 5 4167
* notice: prev accum: outdated-unq outdated-all / unq all: 1574 143731 / 1611 148128
* notice: next accum: outdated-unq outdated-all / unq all: 1576 144029 / 1611 148223
* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -0 -27 / +2 +301 -0 -0 / 2 301
* notice: removed / changed dates: [2023-07-15] / [2023-07-16 2023-07-29]

2023-07-29T16:08:28Z: