@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-07-18T01:10:43Z",
-  "count" : 299,
+  "timestamp" : "2023-07-31T00:46:13Z",
+  "count" : 268,
   "count_minmax" : [ 111, 299 ],
-  "count_decinc" : [ -0, +299 ],
+  "count_decinc" : [ -31, +299 ],
   "uniques" : 3,
   "uniques_minmax" : [ 3, 3 ],
   "uniques_decinc" : [ -0, +3 ]
