@@ -1,15 +1,10 @@
 {
-  "count": 4142,
+  "count": 4166,
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2023-07-16T00:00:00Z",
-      "count": 40,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-07-17T00:00:00Z",
-      "count": 299,
+      "count": 268,
       "uniques": 3
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2023-07-30T00:00:00Z",
-      "count": 206,
+      "count": 301,
       "uniques": 3
     }
   ]
